# Setup configuration

[metadata]
name = dif
version = 0.1.0
description = DIF - Identification of druggable interactors in Knowledge Graphs
long_description = file: README.rst

# URLs
url = https://gitlab.scai.fraunhofer.de/biodev/druggable_interactor_finder

# Author information
author = Bruce Schultz
author_email = bruce.schultz@scai.fraunhofer.de
maintainer = Bruce Schultz
maintainer_email = bruce.schultz@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Biological Expression Language
    Graph Database
    Biomedical Database

[options]
install_requires =
    click
    ebel-rest
    pandas
    matplotlib
    tqdm
    requests
    sqlalchemy
    sqlalchemy_utils

# Package options
zip_safe = false
python_requires = >=3.6
include_package_data = True
packages = find:

[options.packages.find]
include =
    dif
    dif.*

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    dif = dif.cli:main

########################
# Flake8 Configuration #
########################
[flake8]
# D105: Missing docstring in magic method
# E127: continuation line over-indented for visual indent
# E128: continuation line under-indented for visual indent
# E501: line too long
# E722: do not use bare "except"
# W503: line break before binary operator
# W504: line break after binary operator
# N813: imported as lowercase 'et'
# W605: invalid escape sequence '\s'

ignore =
    D105
    E722
    W503
exclude =
    .git,
    __pycache__
max-line-length = 119


##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = dif
omit =
    dif/__main__.py
    dif/cli.py
    tests/*
    docs/*

[coverage:paths]
source =
    dif
    .tox/*/lib/python*/site-packages/dif

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__


#############################
# Bumpversion Configuration #
#############################
[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:dif/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
