# Setup configuration

[metadata]
name = dif
version = 0.1.0
description = DIF - Identification of druggable interactors in Knowledge Graphs
long_description = file: README.rst

# URLs
url = https://gitlab.scai.fraunhofer.de/biodev/druggable_interactor_finder

# Author information
author = Bruce Schultz
author_email = bruce.schultz@scai.fraunhofer.de
maintainer = Bruce Schultz
maintainer_email = bruce.schultz@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    Biological Expression Language
    Graph Database
    Biomedical Database

[options]
install_requires =
    click
    ebel-rest
    pandas
    matplotlib
    tqdm
    requests

# Package options
zip_safe = false
python_requires = >=3.6
include_package_data = True
packages = find:

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    dif = dif.cli:main

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest

########################
# Flake8 Configuration #
########################
[flake8]
# D105: Missing docstring in magic method
# E127: continuation line over-indented for visual indent
# E128: continuation line under-indented for visual indent
# E501: line too long
# E722: do not use bare "except"
# W503: line break before binary operator
# W504: line break after binary operator
# N813: imported as lowercase 'et'
# W605: invalid escape sequence '\s'

ignore = D105,E722,W503
exclude =
    .git,
    __pycache__
max-line-length = 119
per-file-ignores =
    druggable_interactor_finder/manager/orientdb/odb_ss_functions.py:E127,E128,N813,W503,W504,W605,E501
    druggable_interactor_finder/__init__.py:F401


##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = druggable_interactor_finder
omit =
    druggable_interactor_finder/__main__.py
    druggable_interactor_finder/cli.py
    tests/*
    docs/*

[coverage:paths]
source =
    druggable_interactor_finder
    .tox/*/lib/python*/site-packages/druggable_interactor_finder

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__


#############################
# Bumpversion Configuration #
#############################
[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:druggable_interactor_finder/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
